Dependency injection, refactoring, docs + Specifications
